Pending changes exported from your codespace

--- a/notebooks/hw01.ipynb
+++ b/notebooks/hw01.ipynb
@@ -22,6 +22,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "password = \"chinchilla\""
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -32,13 +41,61 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'chinchilla'"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "password"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "\n",
-        "Now edit this text cell to add an explanation of why the two cells behave differently.\n",
+        "The first cell is setting value of the varible \"password\" equal to the string \"chinchilla.\" Once we run this cell code, python will now determine the value of password as \"chinchilla.\" This can we viewed in step 2 when we actually run the cell with password and the computer spits out \"chinchilla.\"\n",
         "\n",
         "---\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'password'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "password = \"password\"\n",
+        "\n",
+        "password"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "The behavior happening in these cells is manipulating and changing the assigned value for the variable password, which can be used effectivley in homework assignments to keep things organized and DRY."
       ]
     },
     {
@@ -60,6 +117,33 @@
         "* Verify that your function works by calling it with the password \"chinchilla\" and the attempt \"Chinchilla\".\n",
         "\n",
         "Use comments to explain what you expect to see in the output of your function from previous two applications of your function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "def check_password(attempt, password):\n",
+        "    return attempt == password\n",
+        "\n",
+        "password = input(\"chinchilla\")\n",
+        "attempt = input(\"chinchilla\")\n",
+        "\n",
+        "if check_password(attempt, password):\n",
+        "    print(\"True\")\n",
+        "else: \n",
+        "    print(\"False\")\n",
+        "\n"
       ]
     },
     {
@@ -93,12 +177,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n"
+          ]
+        }
+      ],
       "source": [
-        "def key_in_dict(key, d):\n",
-        "    return key in d"
+        "users = {'alice': 'chinchilla', 'bob': '123456', 'charlie': 'password'}\n",
+        "\n",
+        "def check_user_password(username, password):\n",
+        "    users = {'alice': 'chinchilla', 'bob': '123456', 'charlie': 'password'}\n",
+        "    if username in users and users[username] == password:\n",
+        "        return True\n",
+        "    return False\n",
+        "    \n",
+        "print(check_user_password('alice', 'chinchilla'))  # should return True\n",
+        "print(check_user_password('alice', 'Chinchilla'))  # should return False\n",
+        "print(check_user_password('bobby', '123456'))      # should return False"
       ]
     },
     {
@@ -117,14 +220,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2180cc6f060cdfb71a458b60f404f56d682abaf7efd3df81a957684ab3803f18\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
         "import hashlib\n",
         "\n",
         "def hash(x):\n",
-        "  return hashlib.sha256(x.encode('utf-8')).hexdigest()"
+        "  return hashlib.sha256(x.encode('utf-8')).hexdigest()\n",
+        "\n",
+        "print(hash(\"chinchilla\"))\n",
+        "\n",
+        "oghash = \"2180cc6f060cdfb71a458b60f404f56d682abaf7efd3df81a957684ab3803f18\"\n",
+        "\n",
+        "computedhash = hash(\"chinchilla\")\n",
+        "\n",
+        "hash2 = (computedhash == oghash)\n",
+        "print(hash2)\n"
       ]
     },
     {
@@ -138,7 +259,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -147,7 +268,7 @@
               "'b00ef262afae566b51f740124a6b12d982a2cff1bbf2ab5632cb548e98da6feb'"
             ]
           },
-          "execution_count": 27,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -158,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -177,6 +298,34 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[False, True, False]"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "hash(\"badger\")\n",
+        "\n",
+        "hash(\"wolverine\")\n",
+        "\n",
+        "hash(\"jaguar\")\n",
+        "\n",
+        "\n",
+        "[stolen_password == hash(word) for word in [\"badger\", \"wolverine\", \"jaguar\"]]\n",
+        "\n"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -189,13 +338,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'63479ad69a090b258277ec8fba6f99419a2ffb248981510657c944ccd1148e97'"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def salted_hash(password):\n",
         "  salt = \"zoology\"\n",
-        "  return 0 # replace 0 with the salted hash\n",
+        "  return salted_hash # replace 0 with the salted hash\n",
+        "\n",
+        "salted_hash(\"cardinal\")\n",
+        "\n",
+        "hash(\"salt\")\n",
         "\n",
         "# compute the salted and hashed version of the password \"cardinal\"\n",
         "# demonstrate that we cannot guess without the salt."
@@ -214,7 +378,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -223,13 +387,20 @@
               "[1, 0, 1]"
             ]
           },
-          "execution_count": 30,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
         "[3 % 2, 4 % 2, 5 % 2]"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "After running the code I was able to deterine that the % function is to calculate the remainder of a division problem. It then returns the value of the remainder. "
       ]
     },
     {
@@ -243,26 +414,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
         "def is_odd(num):\n",
-        "    return False"
+        "    if num % 2 == 0:\n",
+        "        return True\n",
+        "    if num % 2 != 0: #using Copilot I was able to learn that the =! function means \"not equal to.\"\n",
+        "        return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "False"
+              "True"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -273,7 +447,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -282,7 +456,7 @@
               "False"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -302,11 +476,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
         "some_numbers = [91, 88, 38, 103, 199372, 3, 4945, 20098]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[91, 103, 3, 4945]\n",
+            "[3, 91, 103, 4945]\n"
+          ]
+        }
+      ],
+      "source": [
+        "def is_odd(num):# function for odd numbers\n",
+        "    return num % 2 != 0\n",
+        "\n",
+        "odd_numbers = [] \n",
+        "\n",
+        "for number in some_numbers:\n",
+        "    if is_odd(number):\n",
+        "        odd_numbers.append(number) \n",
+        "\n",
+        "print(odd_numbers)\n",
+        "\n",
+        "\n",
+        "odd_numbers.sort()\n",
+        "print(odd_numbers)"
       ]
     },
     {
@@ -320,6 +525,34 @@
         "\n",
         "Using a **list comprehension** select just the odd elements of `some_numbers`, convert them to strings (using the `str` function), and then `hash2` them. **Do not** use any results from part (c) in your solution.\n",
         "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['1da51b8d8ff98f6a48f80ae79fe3ca6c26e1abb7b7d125259255d6d2b875ea08', '454f63ac30c8322997ef025edff6abd23e0dbe7b8a3d5126a894e4a168c1b59b', '4e07408562bedb8b60ce05c1decfe3ad16b72230967de01f640b7e4729b49fce', 'dcc29e4daf71d69ed930fed1226afabff8390db9a6ead22e08392878ffa7d65d']\n"
+          ]
+        }
+      ],
+      "source": [
+        "hashed_odd_numbers = [hash(str(num)) for num in some_numbers if is_odd(num)]\n",
+        "print(hashed_odd_numbers)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "### Q2e\n",
         "\n",
@@ -330,7 +563,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
@@ -339,7 +572,7 @@
               "'5cf4e26bd3d87da5e03f80a43a64f1220a1f4ba9e1d6348caea83c06353c3f39'"
             ]
           },
-          "execution_count": 35,
+          "execution_count": 18,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -350,7 +583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 19,
       "metadata": {
         "executionInfo": {
           "elapsed": 150,
@@ -376,6 +609,29 @@
         "\n",
         "* Write a function that takes a number as an input, and returns True if that number (after being coverted to a string) hashes to the `hashed_number` value.\n",
         "* Use this function to find out if value in 0 to 100000 was the password. (Hint: use the `range(a, b)` function which gives back a sequence of values from a to (b - 1)).\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 20,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 20,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def is_password(number):\n",
+        "    return hash(str(number)) == hashed_number\n",
+        "\n",
+        "is_password(range(0,100000))"
       ]
     }
   ],
